# renumics-rag

./: .dockerignore  .envrc  .gitignore  .pre-commit-config.yaml  .prettierrc.yaml  .tool-versions  Dockerfile  LICENSE  Makefile  README.dev.md  README.md  pyproject.toml  settings.yaml
assistant/: __init__.py  app.py  app2.py  const.py  exceptions.py  exploration.py  llm.py  settings.py  sql_rag.py  types.py
assistant/cli/: answer.py  app.py  create_db.py  explore.py  retrieve.py
notebooks/: qa_gpt35.json  qa_gpt4.json  visualize_rag_tutorial.ipynb  visualize_rag_tutorial_qs.ipynb
scripts/: answer.py  create_db.py
