[tool.poetry]
name = "renumics-rag"
version = "0.1.0"
description = "Renumics RAG: Explore and Visualize RAG Data"
authors = ["Renumics GmbH <info@renumics.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "assistant" },
]

[tool.poetry.scripts]
create-db = "assistant.cli.create_db:app"
answer = "assistant.cli.answer:app"
retrieve = "assistant.cli.retrieve:app"
explore = "assistant.cli.explore:app"
app = "assistant.cli.app:app"

[tool.poetry.dependencies]
python = ">=3.10.1 <3.12.0"
typing-extensions = "^4.9.0"
typer = "^0.9.0"
langchain = "^0.3.27"
langchain-community = "^0.3.27"
langchain-core = "^0.3.80"
chromadb = "^0.4.22"
pysqlite3-binary = {version = "^0.5.2.post2", platform = 'linux'}
beautifulsoup4 = "^4.12.3"
lxml = "^5.1.0"
streamlit = "^1.30.0"
pyyaml = "^6.0.1"
pydantic = "^2.5.3"
langchain-openai = {version = "^0.3.27", optional = true}
transformers = {version = "^4.53.1", optional = true}
bitsandbytes = {version = "^0.42.0", optional = true}
unstructured = "^0.14.3"
markdown = "^3.5.2"
pypdf = "^6.1.3"
pandas = "^2.0.3"
renumics-spotlight = {version = "^1.6.5", optional = true}
docx2txt = "^0.8"
protobuf = ">=4.25.8"
tornado = ">6.5"
setuptools = ">=78.1.1"
starlette = ">=0.47.2"
jinja2 = ">=3.1.5"
aiohttp = ">=3.12.14"

[tool.poetry.extras]
openai = ["langchain-openai"]
hf = ["transformers", "bitsandbytes"]
exploration = ["renumics-spotlight"]
all = ["langchain-openai", "transformers", "bitsandbytes", "renumics-spotlight"]

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.1"
black = "^24.3.0"
ruff = "^0.1.14"
mypy = "^1.7.1"
pandas-stubs = "^2.0.2.230605"
types-pyyaml = "^6.0.12.12"
types-tqdm = "^4.66.0.20240106"
ipython = "^8.12.3"
notebook = "^7.2.2"
langchain-experimental = "*"
opentelemetry-exporter-otlp-proto-grpc = "<1.23"

[tool.ruff.lint]
extend-select = [
  "I",
]

[tool.mypy]
ignore_missing_imports = false
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "transformers",
    "sentence_transformers",
    "torch.*",
    "renumics.*"
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
