[project]
name = "renumics-rag"
version = "0.1.0"
description = "Renumics RAG: Explore and Visualize RAG Data"
readme = "README.md"
authors = [{ name = "Renumics GmbH", email = "info@renumics.com" }]
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "typing-extensions>=4.9.0",
    "typer>=0.9.0",
    "langchain>=0.2.3",
    "langchain-community>=0.2.4",
    "langchain-core>=0.2.5",
    "chromadb>=0.4.22",
    "pysqlite3-binary>=0.5.2.post2; sys_platform == 'linux'",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.1.0",
    "streamlit>=1.30.0",
    "pyyaml>=6.0.1",
    "pydantic>=2.0.0,<3.0.0",
    "unstructured>=0.11.8",
    "markdown>=3.5.2",
    "pypdf>=4.0.1",
    "pandas>=2.0.3",
    "docx2txt>=0.8",
    "langchain-chroma>=1.0.0",
    "langchain-text-splitters>=1.1.2",
]

[project.optional-dependencies]
openai = [
    "langchain-openai>=0.1.8"
]
hf = [
    "transformers>=4.37.1",
    "bitsandbytes>=0.42.0",
]
exploration = [
    "renumics-spotlight>=1.6.5"
]
cpu = [
    "torch",
    "torchvision",
    "sentence-transformers",
    "accelerate",
]
cu130 = [
    "torch",
    "torchvision",
    "sentence-transformers",
    "accelerate",
]

[project.scripts]
create-db = "assistant.cli.create_db:app"
answer = "assistant.cli.answer:app"
retrieve = "assistant.cli.retrieve:app"
explore = "assistant.cli.explore:app"
app = "assistant.cli.app:app"

[dependency-groups]
dev = [
    "pre-commit>=3.0.1",
    "black>=23.12.1",
    "ruff>=0.1.14",
    "mypy>=1.7.1",
    "pandas-stubs>=2.0.2.230605",
    "types-pyyaml>=6.0.12.12",
    "types-tqdm>=4.66.0.20240106",
    "ipython>=8.12.3",
    "notebook>=7.0.8",
    "langchain-experimental",
    "opentelemetry-exporter-otlp-proto-grpc<1.23",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.mypy]
ignore_missing_imports = false
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "transformers",
    "sentence_transformers",
    "torch.*",
    "renumics.*"
]
ignore_missing_imports = true

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu130" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu130", extra = "cu130" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu130", extra = "cu130" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.hatch.build.targets.wheel]
packages = ["assistant"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
